src/test/resources/private/typechecking/pass/this/this_04_param.jova
class Test2 {
    public int testing (Test2 t) {
        return 0;
    }
}

class Test{
    private Test2 t;
    public int test(int t) {
        return this.t.testing(this.t);
    }
}