src/test/resources/private/typechecking/fail/main_structure/fail06_mainAsMethodParam.jova
class Helper {
}

class Main {
}

class Test {
    public int a;
    public string b;
    public int c;
    public string d;


    public int func(char param0, Helper param1, Main param2 ) {
        return 0;
    }
}